seaqt/QtWidgets/gen_qtabbar.h

typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabBar QTabBar;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QTabBar* QTabBar_new(QWidget* parent);
QTabBar* QTabBar_new2();
QMetaObject* QTabBar_metaObject(const QTabBar* self);
void* QTabBar_metacast(QTabBar* self, const char* param1);
struct miqt_string QTabBar_tr(const char* s);
int QTabBar_shape(const QTabBar* self);
void QTabBar_setShape(QTabBar* self, int shape);
int QTabBar_addTab(QTabBar* self, struct miqt_string text);
int QTabBar_addTab2(QTabBar* self, QIcon* icon, struct miqt_string text);
int QTabBar_insertTab(QTabBar* self, int index, struct miqt_string text);
int QTabBar_insertTab2(QTabBar* self, int index, QIcon* icon, struct miqt_string text);
void QTabBar_removeTab(QTabBar* self, int index);
void QTabBar_moveTab(QTabBar* self, int from, int to);
bool QTabBar_isTabEnabled(const QTabBar* self, int index);
void QTabBar_setTabEnabled(QTabBar* self, int index, bool enabled);
bool QTabBar_isTabVisible(const QTabBar* self, int index);
void QTabBar_setTabVisible(QTabBar* self, int index, bool visible);
struct miqt_string QTabBar_tabText(const QTabBar* self, int index);
void QTabBar_setTabText(QTabBar* self, int index, struct miqt_string text);
QColor* QTabBar_tabTextColor(const QTabBar* self, int index);
void QTabBar_setTabTextColor(QTabBar* self, int index, QColor* color);
QIcon* QTabBar_tabIcon(const QTabBar* self, int index);
void QTabBar_setTabIcon(QTabBar* self, int index, QIcon* icon);
int QTabBar_elideMode(const QTabBar* self);
void QTabBar_setElideMode(QTabBar* self, int mode);
void QTabBar_setTabToolTip(QTabBar* self, int index, struct miqt_string tip);
struct miqt_string QTabBar_tabToolTip(const QTabBar* self, int index);
void QTabBar_setTabWhatsThis(QTabBar* self, int index, struct miqt_string text);
struct miqt_string QTabBar_tabWhatsThis(const QTabBar* self, int index);
void QTabBar_setTabData(QTabBar* self, int index, QVariant* data);
QVariant* QTabBar_tabData(const QTabBar* self, int index);
QRect* QTabBar_tabRect(const QTabBar* self, int index);
int QTabBar_tabAt(const QTabBar* self, QPoint* pos);
int QTabBar_currentIndex(const QTabBar* self);
int QTabBar_count(const QTabBar* self);
QSize* QTabBar_sizeHint(const QTabBar* self);
QSize* QTabBar_minimumSizeHint(const QTabBar* self);
void QTabBar_setDrawBase(QTabBar* self, bool drawTheBase);
bool QTabBar_drawBase(const QTabBar* self);
QSize* QTabBar_iconSize(const QTabBar* self);
void QTabBar_setIconSize(QTabBar* self, QSize* size);
bool QTabBar_usesScrollButtons(const QTabBar* self);
void QTabBar_setUsesScrollButtons(QTabBar* self, bool useButtons);
bool QTabBar_tabsClosable(const QTabBar* self);
void QTabBar_setTabsClosable(QTabBar* self, bool closable);
void QTabBar_setTabButton(QTabBar* self, int index, int position, QWidget* widget);
QWidget* QTabBar_tabButton(const QTabBar* self, int index, int position);
int QTabBar_selectionBehaviorOnRemove(const QTabBar* self);
void QTabBar_setSelectionBehaviorOnRemove(QTabBar* self, int behavior);
bool QTabBar_expanding(const QTabBar* self);
void QTabBar_setExpanding(QTabBar* self, bool enabled);
bool QTabBar_isMovable(const QTabBar* self);
void QTabBar_setMovable(QTabBar* self, bool movable);
bool QTabBar_documentMode(const QTabBar* self);
void QTabBar_setDocumentMode(QTabBar* self, bool set);
bool QTabBar_autoHide(const QTabBar* self);
void QTabBar_setAutoHide(QTabBar* self, bool hide);
bool QTabBar_changeCurrentOnDrag(const QTabBar* self);
void QTabBar_setChangeCurrentOnDrag(QTabBar* self, bool change);
struct miqt_string QTabBar_accessibleTabName(const QTabBar* self, int index);
void QTabBar_setAccessibleTabName(QTabBar* self, int index, struct miqt_string name);
void QTabBar_setCurrentIndex(QTabBar* self, int index);
void QTabBar_currentChanged(QTabBar* self, int index);
void QTabBar_connect_currentChanged(QTabBar* self, intptr_t slot);
void QTabBar_tabCloseRequested(QTabBar* self, int index);
void QTabBar_connect_tabCloseRequested(QTabBar* self, intptr_t slot);
void QTabBar_tabMoved(QTabBar* self, int from, int to);
void QTabBar_connect_tabMoved(QTabBar* self, intptr_t slot);
void QTabBar_tabBarClicked(QTabBar* self, int index);
void QTabBar_connect_tabBarClicked(QTabBar* self, intptr_t slot);
void QTabBar_tabBarDoubleClicked(QTabBar* self, int index);
void QTabBar_connect_tabBarDoubleClicked(QTabBar* self, intptr_t slot);
struct miqt_string QTabBar_tr2(const char* s, const char* c);
struct miqt_string QTabBar_tr3(const char* s, const char* c, int n);
bool QTabBar_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QTabBar_virtualbase_sizeHint(const void* self);
bool QTabBar_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QTabBar_virtualbase_minimumSizeHint(const void* self);
bool QTabBar_override_virtual_tabSizeHint(void* self, intptr_t slot);
QSize* QTabBar_virtualbase_tabSizeHint(const void* self, int index);
bool QTabBar_override_virtual_minimumTabSizeHint(void* self, intptr_t slot);
QSize* QTabBar_virtualbase_minimumTabSizeHint(const void* self, int index);
bool QTabBar_override_virtual_tabInserted(void* self, intptr_t slot);
void QTabBar_virtualbase_tabInserted(void* self, int index);
bool QTabBar_override_virtual_tabRemoved(void* self, intptr_t slot);
void QTabBar_virtualbase_tabRemoved(void* self, int index);
bool QTabBar_override_virtual_tabLayoutChange(void* self, intptr_t slot);
void QTabBar_virtualbase_tabLayoutChange(void* self);
bool QTabBar_override_virtual_event(void* self, intptr_t slot);
bool QTabBar_virtualbase_event(void* self, QEvent* param1);
bool QTabBar_override_virtual_resizeEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_resizeEvent(void* self, QResizeEvent* param1);
bool QTabBar_override_virtual_showEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_showEvent(void* self, QShowEvent* param1);
bool QTabBar_override_virtual_hideEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_hideEvent(void* self, QHideEvent* param1);
bool QTabBar_override_virtual_paintEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QTabBar_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_mousePressEvent(void* self, QMouseEvent* param1);
bool QTabBar_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_mouseMoveEvent(void* self, QMouseEvent* param1);
bool QTabBar_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* param1);
bool QTabBar_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* param1);
bool QTabBar_override_virtual_wheelEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QTabBar_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QTabBar_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);