seaqt/QtWidgets/gen_qtabbar.nim


proc fcQTabBar_new(parent: pointer): ptr cQTabBar {.importc: "QTabBar_new".}
proc fcQTabBar_new2(): ptr cQTabBar {.importc: "QTabBar_new2".}
proc fcQTabBar_metaObject(self: pointer, ): pointer {.importc: "QTabBar_metaObject".}
proc fcQTabBar_metacast(self: pointer, param1: cstring): pointer {.importc: "QTabBar_metacast".}
proc fcQTabBar_tr(s: cstring): struct_miqt_string {.importc: "QTabBar_tr".}
proc fcQTabBar_shape(self: pointer, ): cint {.importc: "QTabBar_shape".}
proc fcQTabBar_setShape(self: pointer, shape: cint): void {.importc: "QTabBar_setShape".}
proc fcQTabBar_addTab(self: pointer, text: struct_miqt_string): cint {.importc: "QTabBar_addTab".}
proc fcQTabBar_addTab2(self: pointer, icon: pointer, text: struct_miqt_string): cint {.importc: "QTabBar_addTab2".}
proc fcQTabBar_insertTab(self: pointer, index: cint, text: struct_miqt_string): cint {.importc: "QTabBar_insertTab".}
proc fcQTabBar_insertTab2(self: pointer, index: cint, icon: pointer, text: struct_miqt_string): cint {.importc: "QTabBar_insertTab2".}
proc fcQTabBar_removeTab(self: pointer, index: cint): void {.importc: "QTabBar_removeTab".}
proc fcQTabBar_moveTab(self: pointer, fromVal: cint, to: cint): void {.importc: "QTabBar_moveTab".}
proc fcQTabBar_isTabEnabled(self: pointer, index: cint): bool {.importc: "QTabBar_isTabEnabled".}
proc fcQTabBar_setTabEnabled(self: pointer, index: cint, enabled: bool): void {.importc: "QTabBar_setTabEnabled".}
proc fcQTabBar_isTabVisible(self: pointer, index: cint): bool {.importc: "QTabBar_isTabVisible".}
proc fcQTabBar_setTabVisible(self: pointer, index: cint, visible: bool): void {.importc: "QTabBar_setTabVisible".}
proc fcQTabBar_tabText(self: pointer, index: cint): struct_miqt_string {.importc: "QTabBar_tabText".}
proc fcQTabBar_setTabText(self: pointer, index: cint, text: struct_miqt_string): void {.importc: "QTabBar_setTabText".}
proc fcQTabBar_tabTextColor(self: pointer, index: cint): pointer {.importc: "QTabBar_tabTextColor".}
proc fcQTabBar_setTabTextColor(self: pointer, index: cint, color: pointer): void {.importc: "QTabBar_setTabTextColor".}
proc fcQTabBar_tabIcon(self: pointer, index: cint): pointer {.importc: "QTabBar_tabIcon".}
proc fcQTabBar_setTabIcon(self: pointer, index: cint, icon: pointer): void {.importc: "QTabBar_setTabIcon".}
proc fcQTabBar_elideMode(self: pointer, ): cint {.importc: "QTabBar_elideMode".}
proc fcQTabBar_setElideMode(self: pointer, mode: cint): void {.importc: "QTabBar_setElideMode".}
proc fcQTabBar_setTabToolTip(self: pointer, index: cint, tip: struct_miqt_string): void {.importc: "QTabBar_setTabToolTip".}
proc fcQTabBar_tabToolTip(self: pointer, index: cint): struct_miqt_string {.importc: "QTabBar_tabToolTip".}
proc fcQTabBar_setTabWhatsThis(self: pointer, index: cint, text: struct_miqt_string): void {.importc: "QTabBar_setTabWhatsThis".}
proc fcQTabBar_tabWhatsThis(self: pointer, index: cint): struct_miqt_string {.importc: "QTabBar_tabWhatsThis".}
proc fcQTabBar_setTabData(self: pointer, index: cint, data: pointer): void {.importc: "QTabBar_setTabData".}
proc fcQTabBar_tabData(self: pointer, index: cint): pointer {.importc: "QTabBar_tabData".}
proc fcQTabBar_tabRect(self: pointer, index: cint): pointer {.importc: "QTabBar_tabRect".}
proc fcQTabBar_tabAt(self: pointer, pos: pointer): cint {.importc: "QTabBar_tabAt".}
proc fcQTabBar_currentIndex(self: pointer, ): cint {.importc: "QTabBar_currentIndex".}
proc fcQTabBar_count(self: pointer, ): cint {.importc: "QTabBar_count".}
proc fcQTabBar_sizeHint(self: pointer, ): pointer {.importc: "QTabBar_sizeHint".}
proc fcQTabBar_minimumSizeHint(self: pointer, ): pointer {.importc: "QTabBar_minimumSizeHint".}
proc fcQTabBar_setDrawBase(self: pointer, drawTheBase: bool): void {.importc: "QTabBar_setDrawBase".}
proc fcQTabBar_drawBase(self: pointer, ): bool {.importc: "QTabBar_drawBase".}
proc fcQTabBar_iconSize(self: pointer, ): pointer {.importc: "QTabBar_iconSize".}
proc fcQTabBar_setIconSize(self: pointer, size: pointer): void {.importc: "QTabBar_setIconSize".}
proc fcQTabBar_usesScrollButtons(self: pointer, ): bool {.importc: "QTabBar_usesScrollButtons".}
proc fcQTabBar_setUsesScrollButtons(self: pointer, useButtons: bool): void {.importc: "QTabBar_setUsesScrollButtons".}
proc fcQTabBar_tabsClosable(self: pointer, ): bool {.importc: "QTabBar_tabsClosable".}
proc fcQTabBar_setTabsClosable(self: pointer, closable: bool): void {.importc: "QTabBar_setTabsClosable".}
proc fcQTabBar_setTabButton(self: pointer, index: cint, position: cint, widget: pointer): void {.importc: "QTabBar_setTabButton".}
proc fcQTabBar_tabButton(self: pointer, index: cint, position: cint): pointer {.importc: "QTabBar_tabButton".}
proc fcQTabBar_selectionBehaviorOnRemove(self: pointer, ): cint {.importc: "QTabBar_selectionBehaviorOnRemove".}
proc fcQTabBar_setSelectionBehaviorOnRemove(self: pointer, behavior: cint): void {.importc: "QTabBar_setSelectionBehaviorOnRemove".}
proc fcQTabBar_expanding(self: pointer, ): bool {.importc: "QTabBar_expanding".}
proc fcQTabBar_setExpanding(self: pointer, enabled: bool): void {.importc: "QTabBar_setExpanding".}
proc fcQTabBar_isMovable(self: pointer, ): bool {.importc: "QTabBar_isMovable".}
proc fcQTabBar_setMovable(self: pointer, movable: bool): void {.importc: "QTabBar_setMovable".}
proc fcQTabBar_documentMode(self: pointer, ): bool {.importc: "QTabBar_documentMode".}
proc fcQTabBar_setDocumentMode(self: pointer, set: bool): void {.importc: "QTabBar_setDocumentMode".}
proc fcQTabBar_autoHide(self: pointer, ): bool {.importc: "QTabBar_autoHide".}
proc fcQTabBar_setAutoHide(self: pointer, hide: bool): void {.importc: "QTabBar_setAutoHide".}
proc fcQTabBar_changeCurrentOnDrag(self: pointer, ): bool {.importc: "QTabBar_changeCurrentOnDrag".}
proc fcQTabBar_setChangeCurrentOnDrag(self: pointer, change: bool): void {.importc: "QTabBar_setChangeCurrentOnDrag".}
proc fcQTabBar_accessibleTabName(self: pointer, index: cint): struct_miqt_string {.importc: "QTabBar_accessibleTabName".}
proc fcQTabBar_setAccessibleTabName(self: pointer, index: cint, name: struct_miqt_string): void {.importc: "QTabBar_setAccessibleTabName".}
proc fcQTabBar_setCurrentIndex(self: pointer, index: cint): void {.importc: "QTabBar_setCurrentIndex".}
proc fcQTabBar_currentChanged(self: pointer, index: cint): void {.importc: "QTabBar_currentChanged".}
proc fcQTabBar_connect_currentChanged(self: pointer, slot: int) {.importc: "QTabBar_connect_currentChanged".}
proc fcQTabBar_tabCloseRequested(self: pointer, index: cint): void {.importc: "QTabBar_tabCloseRequested".}
proc fcQTabBar_connect_tabCloseRequested(self: pointer, slot: int) {.importc: "QTabBar_connect_tabCloseRequested".}
proc fcQTabBar_tabMoved(self: pointer, fromVal: cint, to: cint): void {.importc: "QTabBar_tabMoved".}
proc fcQTabBar_connect_tabMoved(self: pointer, slot: int) {.importc: "QTabBar_connect_tabMoved".}
proc fcQTabBar_tabBarClicked(self: pointer, index: cint): void {.importc: "QTabBar_tabBarClicked".}
proc fcQTabBar_connect_tabBarClicked(self: pointer, slot: int) {.importc: "QTabBar_connect_tabBarClicked".}
proc fcQTabBar_tabBarDoubleClicked(self: pointer, index: cint): void {.importc: "QTabBar_tabBarDoubleClicked".}
proc fcQTabBar_connect_tabBarDoubleClicked(self: pointer, slot: int) {.importc: "QTabBar_connect_tabBarDoubleClicked".}
proc fcQTabBar_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTabBar_tr2".}
proc fcQTabBar_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTabBar_tr3".}
proc fQTabBar_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QTabBar_virtualbase_sizeHint".}
proc fcQTabBar_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_sizeHint".}
proc fQTabBar_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QTabBar_virtualbase_minimumSizeHint".}
proc fcQTabBar_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_minimumSizeHint".}
proc fQTabBar_virtualbase_tabSizeHint(self: pointer, index: cint): pointer{.importc: "QTabBar_virtualbase_tabSizeHint".}
proc fcQTabBar_override_virtual_tabSizeHint(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_tabSizeHint".}
proc fQTabBar_virtualbase_minimumTabSizeHint(self: pointer, index: cint): pointer{.importc: "QTabBar_virtualbase_minimumTabSizeHint".}
proc fcQTabBar_override_virtual_minimumTabSizeHint(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_minimumTabSizeHint".}
proc fQTabBar_virtualbase_tabInserted(self: pointer, index: cint): void{.importc: "QTabBar_virtualbase_tabInserted".}
proc fcQTabBar_override_virtual_tabInserted(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_tabInserted".}
proc fQTabBar_virtualbase_tabRemoved(self: pointer, index: cint): void{.importc: "QTabBar_virtualbase_tabRemoved".}
proc fcQTabBar_override_virtual_tabRemoved(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_tabRemoved".}
proc fQTabBar_virtualbase_tabLayoutChange(self: pointer, ): void{.importc: "QTabBar_virtualbase_tabLayoutChange".}
proc fcQTabBar_override_virtual_tabLayoutChange(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_tabLayoutChange".}
proc fQTabBar_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QTabBar_virtualbase_event".}
proc fcQTabBar_override_virtual_event(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_event".}
proc fQTabBar_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_resizeEvent".}
proc fcQTabBar_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_resizeEvent".}
proc fQTabBar_virtualbase_showEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_showEvent".}
proc fcQTabBar_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_showEvent".}
proc fQTabBar_virtualbase_hideEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_hideEvent".}
proc fcQTabBar_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_hideEvent".}
proc fQTabBar_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_paintEvent".}
proc fcQTabBar_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_paintEvent".}
proc fQTabBar_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_mousePressEvent".}
proc fcQTabBar_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_mousePressEvent".}
proc fQTabBar_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_mouseMoveEvent".}
proc fcQTabBar_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_mouseMoveEvent".}
proc fQTabBar_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_mouseReleaseEvent".}
proc fcQTabBar_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_mouseReleaseEvent".}
proc fQTabBar_virtualbase_mouseDoubleClickEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_mouseDoubleClickEvent".}
proc fcQTabBar_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_mouseDoubleClickEvent".}
proc fQTabBar_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_wheelEvent".}
proc fcQTabBar_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_wheelEvent".}
proc fQTabBar_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_keyPressEvent".}
proc fcQTabBar_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_keyPressEvent".}
